# STM32_Base_Project

./: .gitignore  .gitmodules  CMakeLists.txt  CodeCoverage.cmake  LICENSE  Makefile  README  README.md  cross.cmake  layout_base.ld  linker.ld
components/cmocka/: cmocka.c  config.h
components/unity/: unity_config.h
docs/: Doxyfile.in
include/: FreeRTOSConfig.h  cmocka_platform.h  simple_module.h  stm32f4xx_hal_conf.h  utilities.h
modules/: CMakeLists.txt
modules/simple_module/: CMakeLists.txt  simple_module.c  simple_module.h
src/: main.c  utilities.c
test/: CMakeLists.txt  test_simple_module.c
test/src/: simple_test.c
